--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,29 @@
 name: Deploy to EC2
-
-on:
+'on':
   push:
     branches:
       - main
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.5.3
         with:
-          ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
-
+          ssh-private-key: '${{ secrets.EC2_SSH_KEY }}'
       - name: Change permissions for the SSH key
         run: |
-          chmod 400 $HOME/.ssh/id_rsa  # Ensure correct permissions
-          ssh-add $HOME/.ssh/id_rsa   # Add the SSH key to the SSH agent
-
+          echo "${{ secrets.EC2_SSH_KEY }}" > rust-project.pem
+          chmod 400 rust-project.pem
       - name: Copy files to EC2
-        run: |
-          scp -o StrictHostKeyChecking=no -i $HOME/.ssh/id_rsa -r * ec2-user@35.173.183.188:/home/ec2-user/project
-
+        run: >
+          scp -o StrictHostKeyChecking=no -i rust-project.pem -r . ec2-user@35.173.183.188:/home/ec2-user/project
       - name: SSH and deploy
-        run: |
-          ssh -o StrictHostKeyChecking=no -i $HOME/.ssh/id_rsa ec2-user@35.173.183.188 << 'EOF'
+        run: >
+          ssh -o StrictHostKeyChecking=no -i rust-project.pem
+          ec2-user@35.173.183.188 << 'EOF'
             # Start Docker service
             sudo service docker start
 
@@ -40,3 +34,4 @@ jobs:
             sudo docker-compose down
             sudo docker-compose up --build -d
           EOF
+
