--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+rusqlite = { version = "0.29.0", features = ["bundled"] }
 actix-web = "4"
 actix-cors = "0.6"
 reqwest = { version = "0.11", features = ["json"] }
