--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,14 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.101",
-    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
+    "chart.js": "^3.5.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "5.0.0",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "chart.js": "^3.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3"
   }
 }
