--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,6 +10,8 @@ COPY package*.json ./
 # Install the dependencies
 RUN npm install
 
+ENV REACT_APP_BACKEND_URL=http://3.92.85.136:8080
+
 # Copy the rest of the application code
 COPY . .
 
